baml_language/crates/baml_tests/snapshots/diagnostic_errors/generic_call_ambiguity/baml_tests__diagnostic_errors__generic_call_ambiguity__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
function user.ArrayCompareThenCall(f: int, x: int) -> int[]  [expr] {
  {  } [f Lt x, y()]
}
function user.ArrayOfComparisons(a: int, b: int, c: int, d: int) -> bool[]  [expr] {
  {  } [a Lt b, c Gt d]
}
function user.ArrayOfComparisonsParenthesized(a: int, b: int, c: int, d: int) -> bool[]  [expr] {
  {  } [a Lt b, c Gt d]
}
function user.y() -> int  [expr] {
  {  } 0
}
function user.GenericCallInArray(k: int, v: string) -> string[]  [expr] {
  {  } [f(k, v)]
}
function user.f(k: K, v: V) -> V  [expr] {
  {  } v
}
function user.literal_arg() -> string  [expr] {
  {  } f("a", "b")
}
function user.paren_union_arg() -> string  [expr] {
  {  } f(0, "b")
}
